<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/tan_background">

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".SearchActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/marginBottom"
        android:text="@string/find"
        android:textSize="@dimen/large_text"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/search_artist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/marginBottom"
        android:hint="@string/findArtist" />

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/marginBottom"
        android:text="@string/resultOne"
        android:textSize="@dimen/large_text" />

    <TextView
        android:id="@+id/query"
        style="@style/searchTheme"
        android:layout_width="match_parent"
        android:layout_height="@dimen/searchHeight"
        android:background="@color/category_sixties"
        android:text="@string/query" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="70dp"
        android:layout_gravity="center_vertical"
        android:background="@color/tan_background"
        android:columnCount="2"
        android:rowCount="2">

        <TextView
            android:id="@+id/sixties"
            style="@style/ChildTheme"
            android:layout_row="0"
            android:layout_column="0"
            android:background="@color/category_sixties"
            android:gravity="center"
            android:text="@string/sixty" />

        <TextView
            android:id="@+id/seventies"
            style="@style/ChildTheme"
            android:layout_row="0"
            android:layout_column="1"
            android:background="@color/category_seventies"
            android:text="@string/seventy" />

        <TextView
            android:id="@+id/eighties"
            style="@style/ChildTheme"
            android:layout_row="1"
            android:layout_column="0"
            android:background="@color/category_eighties"
            android:text="@string/eighty" />

        <TextView
            android:id="@+id/main"
            style="@style/ChildTheme"
            android:layout_row="1"
            android:layout_column="1"
            android:background="@color/category_search"
            android:text="@string/main" />

    </GridLayout>

    </LinearLayout>

</ScrollView>